# pocopine-starter-template

./: .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  app.css  index.html  justfile  rust-toolchain.toml  styles.css
.claude/skills/: README.md
.claude/skills/animation-and-motion/: SKILL.md
.claude/skills/auth/: SKILL.md
.claude/skills/background-jobs/: SKILL.md
.claude/skills/client-modules/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/interaction-utilities/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/pine-charts/: SKILL.md
.claude/skills/pine-icons/: SKILL.md
.claude/skills/pine-richtext/: SKILL.md
.claude/skills/pine-stylekit/: SKILL.md
.claude/skills/plugins/: SKILL.md
.claude/skills/poco-directives/: SKILL.md
.claude/skills/poco-expressions/: SKILL.md
.claude/skills/poco-templates/: SKILL.md
.claude/skills/pocopine-cli/: SKILL.md
.claude/skills/pocopine-components/: SKILL.md
.claude/skills/reactivity-and-stores/: SKILL.md
.claude/skills/routing/: SKILL.md
.claude/skills/scoped-styles/: SKILL.md
.claude/skills/server-functions/: SKILL.md
.claude/skills/slots-and-composition/: SKILL.md
.claude/skills/storage/: SKILL.md
.claude/skills/sync-and-live/: SKILL.md
src/: Counter.poco  WelcomeApp.poco  WelcomeItem.poco  lib.rs
